--- a/style.css
+++ b/style.css
@@ -2,11 +2,11 @@
 Custom styles for forms
 1. Reset page
 2. Custom element styling
-3. FontAwesome customisation 
+3. FontAwesome customisation
+4. Form customisation 
 */
 
 /* 1. Reset page */
-
 * {
     padding: 0;
     margin: 0;
@@ -15,23 +15,10 @@ Custom styles for forms
 
 body {
     background-color: #484a47;
-    font-family: monospace;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 1.1rem;
-    color: #fff;
-    
+    color: #fff;   
     margin: 2.5rem;
-}
-
-form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid #fff;
-}
-.form-control {
-    margin: 1.5rem;
-    padding: 1rem;
 }
 
 /* 2. Custom element styling */
@@ -39,6 +26,7 @@ h3 {
     margin: 0.2rem 0 0.8rem 0;
     text-transform: capitalize;
 }
+
 input {
     font-size: 0.8rem;
     padding: 0.2rem;
@@ -53,10 +41,11 @@ button {
     text-transform: uppercase;
     border-radius: 0.5rem;
     border: none;
-    color: #484a47;
     font-weight: bold;
     background-color: #a1ff0a;
+    cursor: pointer;
 }
+
 /* 3. FontAwesome customisation */
 .fas {
     font-size: 1.1rem;
@@ -66,4 +55,26 @@ button {
 }
 .fa-exclamation-circle {
     color: #ff0000;
+}
+
+/* 4. Form customisation */
+form {
+    border: 1px solid #fff;
+}
+.form-control {
+    width: 100%;
+}
+.form-control label, input{
+    display: block;
+    margin: 0 0 0.4rem 0.2rem;
+}
+
+.form-control small {
+    visibility: hidden;
+}
+.form-control i {
+    visibility: hidden;
+}
+.form-control button{
+    width: 100%;
 }
