--- a/style.css
+++ b/style.css
@@ -14,35 +14,42 @@ Custom styles for forms
 }
 
 body {
-    background-color: #484a47;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 1.1rem;
-    color: #fff;   
     margin: 2.5rem;
 }
 
 /* 2. Custom element styling */
-h3 {
-    margin: 0.2rem 0 0.8rem 0;
-    text-transform: capitalize;
+header {
+    background-color: #f4f4f4;
+    height: 5rem;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-
+h3 {
+    margin: 0.5rem;
+}
 input {
     font-size: 0.8rem;
     padding: 0.2rem;
     text-transform: capitalize;
+    border-radius: 0.25rem;
 }
-label {
+h1, h2, h3, h4, h5 , small, label {
     text-transform: capitalize;
+}
+small {
+    margin: 0.2rem
 }
 button {
     padding: 0.5rem;
     margin: 0.8rem;
     text-transform: uppercase;
-    border-radius: 0.5rem;
+    border-radius: 0.35rem;
     border: none;
     font-weight: bold;
-    background-color: #a1ff0a;
     cursor: pointer;
 }
 
@@ -51,30 +58,26 @@ button {
     font-size: 1.1rem;
 }
 .fa-check-circle {
-    color: #a1ff0a;
+    color: #51d908;
 }
 .fa-exclamation-circle {
-    color: #ff0000;
+    color: #ec0909;
 }
 
 /* 4. Form customisation */
-form {
-    border: 1px solid #fff;
-}
 .form-control {
     width: 100%;
-}
-.form-control label, input{
-    display: block;
-    margin: 0 0 0.4rem 0.2rem;
+    border-bottom: 0.5px solid #f4f4f4;
+    padding: 0.45rem;
 }
 
-.form-control small {
-    visibility: hidden;
+.form-control label{
+    display: block;
+    margin: 0.2rem;
 }
-.form-control i {
-    visibility: hidden;
+.form-control input {
+    
 }
 .form-control button{
-    width: 100%;
+    display: block;
 }
